--- a/template.css
+++ b/template.css
@@ -4,12 +4,36 @@ body {
 } 
 
 p {
-	 font-size: 14px;
+	 font-size: 16px;
 }
 
 a {
 	text-decoration: none;
 	color: LightSteelBlue;
+}
+
+.button {
+	border: none;
+	color: LightSteelBlue;
+	padding: 16px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	transition-duration: 0.25s;
+	cursor: pointer;
+	background-color: #4c5c7a; 
+}
+
+.button:hover {
+  background-color: #LightBlueSteel;
+  color: #4c5c7a;
+}
+
+.mainBanner {
+	margin: 2%;
+	color: #ff0000;
 }
 
 .bottomBanner {
