--- a/template.css
+++ b/template.css
@@ -11,12 +11,12 @@ p {
 a {
 	text-decoration: none;
 	font-weight: bold;
-	color: #LightSteelBlue;
+	color: LightSteelBlue;
 	font-size: 16px
 }
 
 button {
-	border: 2px solid #LightSteelBlue;
+	border: 2px solid LightSteelBlue;
 	padding: 16px 32px;
 	text-align: center;
 	text-decoration: none;
