--- a/template.css
+++ b/template.css
@@ -36,13 +36,12 @@ button:hover {
 	color: LightSteelBlue;
 }
 
-.main {
-	margin: auto;
+div {
+	margin: 0 auto;
+	padding: 2%;
 	background-color: #4c5c7a;
 }
 
-.bottomBanner {
-	padding: 2%;
-	background-color: #4c5c7a;    
+.bottomBanner { 
 	text-align: center;
 }
