--- a/template.css
+++ b/template.css
@@ -37,9 +37,14 @@ button:hover {
 }
 
 div {
-	margin: 0 auto;
-	padding: 2%;
+	/*margin: 0 auto;
+	padding: 2%; */
 	background-color: #4c5c7a;
+	display:flex;
+	height:100%;
+	width:100%;
+	justify-content:center;
+	align-items:center;
 }
 
 .bottomBanner { 
