--- a/template.css
+++ b/template.css
@@ -42,6 +42,9 @@ button:hover {
 	background-color: #4c5c7a;
 }
 
+table {
+	border: 1px solid red;
+}
 .bottomBanner { 
 	background-color: #4c5c7a;
 	display:flex;
