--- a/template.css
+++ b/template.css
@@ -6,6 +6,7 @@ body {
 p {
 	font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
+	color: white;
 }
 
 a {
@@ -17,7 +18,7 @@ a {
 
 button {
 	border: 2px solid LightSteelBlue;
-	padding: 16px 32px;
+	padding: 2% 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -28,7 +29,7 @@ button {
 	background-color: LightSteelBlue;
   	color: #4c5c7a;
 	border-radius: 8px;
-	width: 33%;
+	width: 46%;
 }
 
 button:hover {
