--- a/template.css
+++ b/template.css
@@ -18,12 +18,12 @@ a {
 
 button {
 	border: 2px solid LightSteelBlue;
-	padding: 2% 32px;
+	padding: 32px 16px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 24px;
-	margin: 4px 2px;
+	margin: 2%;
 	transition-duration: 0.25s;
 	cursor: pointer;
 	background-color: LightSteelBlue;
