--- a/template.css
+++ b/template.css
@@ -6,11 +6,10 @@ body {
 p {
 	font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
-	color: white;
+	color: LightSteelBlue;
 }
 
 a {
-	text-decoration: none;
 	font-weight: bold;
 	color: LightSteelBlue;
 	font-size: 16px
@@ -29,7 +28,7 @@ button {
 	background-color: LightSteelBlue;
   	color: #4c5c7a;
 	border-radius: 8px;
-	width: 42%;
+	width: 44%;
 }
 
 button:hover {
@@ -49,7 +48,6 @@ table {
 }
 
 .bottomBanner { 
-	
 	background-color: #4c5c7a;
 	display:flex;
 	height:100%;
@@ -57,4 +55,8 @@ table {
 	justify-content:center;
 	align-items:center;
 	text-align: center;
+}
+
+.bottomBanner a {
+	text-decorations: none;
 }
