--- a/template.css
+++ b/template.css
@@ -39,13 +39,11 @@ button:hover {
 .main {
 	padding: 2%;
 	background-color: #4c5c7a;
-	display: block;
-	margin: auto;
 }
 
 table {
 	/*border: 1px solid red;*/
-	margin: 1%;
+	padding: 1%;
 }
 
 .bottomBanner { 
