--- a/template.css
+++ b/template.css
@@ -43,7 +43,11 @@ button:hover {
 
 table {
 	/*border: 1px solid red;*/
-	padding: 1%;
+	padding: 3%;
+}
+
+img {
+	max-width: 150%;
 }
 
 .bottomBanner { 
