--- a/template.css
+++ b/template.css
@@ -41,13 +41,13 @@ button:hover {
 	background-color: #4c5c7a;
 }
 
-table {
+th, td {
 	/*border: 1px solid red;*/
 	padding: 3%;
 }
 
 img {
-	max-width: 150%;
+	max-width: 100%;
 }
 
 .bottomBanner { 
