--- a/template.css
+++ b/template.css
@@ -11,8 +11,9 @@ p {
 
 a {
 	font-weight: bold;
+	font-size: 16px;
+	font-family: Arial, Helvetica, sans-serif;
 	color: LightSteelBlue;
-	font-size: 16px
 }
 
 button {
@@ -37,7 +38,7 @@ button:hover {
 }
 
 div {
-	padding: 2%;
+	padding: 1%;
 	background-color: #4c5c7a;
 }
 
@@ -62,4 +63,5 @@ img {
 
 .bottomBanner a {
 	text-decoration: none;
+	font-size: 22px;
 }
