--- a/template.css
+++ b/template.css
@@ -53,9 +53,11 @@ img {
 }
 
 .bottomBanner { 
-	display: flex;
-	justify-content: center;
-	text-align: center;
+	display:flex;
+	height:100%;
+	width:100%;
+	justify-content:center;
+	align-items:center;
 }
 
 .bottomBanner a {
